@@ -1,4 +1,4 @@
-<!-- $Id: texinfo.dtd,v 1.6 2003-11-10 17:04:09 dirt Exp $
+<!-- $Id: texinfo.dtd,v 1.7 2003-11-11 04:12:17 dirt Exp $
    Document Type Definition for Texinfo.
 
    Author: Philippe Martin (feloy@free.fr)
@@ -413,6 +413,8 @@
 <!ENTITY iquest "">
 <!ENTITY AElig "">
 <!ENTITY aelig "">
+<!ENTITY OElig "">
+<!ENTITY oelig "">
 <!ENTITY Aring "">
 <!ENTITY aring "">
 <!ENTITY szlig "">
